# sfdm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
cmake/: create_config_header.cmake  sfdm_config.hpp.in
conan/all/: conandata.yml  conanfile.py
conan/all/test_package/: test_package.cpp
doc/: create_plots.py  detection_results.md  performance.md
include/sfdm/: decode_result.hpp  icode_reader.hpp  libdmtx_code_reader.hpp  libdmtx_fast_code_reader.hpp  libdmtx_zxing_combined_code_reader.hpp  sfdm.hpp  zxing_code_reader.hpp
src/: libdmtx_code_reader.cpp  libdmtx_fast_code_reader.cpp  libdmtx_zxing_combined_code_reader.cpp  zxing_code_reader.cpp
test/: CMakeLists.txt  benchmark_decoder.cpp  create_plots.py  main.cpp  test_decoder.cpp  test_utils.cpp  test_utils.hpp
